tests/NormalTests/paczka1/small_fuzzy/28716917.err
Error in line 2: TRE8rGW S524 65,6
Error in line 9: S167 S172 86,97
Error in line 10: 2jFKSRo7u S172 17,4
Error in line 15: n4j4tzW S167 243,9
